# team04

./: .gitignore  .ssh  .ssh.pub  CMakeLists.txt  README.md  classifier_settings.yaml  contors.py  copy_files.sh  detection_yolo.yaml  index.txt  look_miro.py  lost_navigate.py  make_sound.py  mask_yolo.yaml  package.xml  process_howl.py  recognise_image.py  search_miro.py  settings.yaml  simple_enviroment.world  take_images.py  take_images.world
custom_actions/: action_helper.py  action_lost.py  action_rescue.py
dataset/: index.txt  labels.csv
launch/: alternate_helper_miro.launch  biorescue_helper.launch  biorescue_lost.launch  helper_miro.launch  lost_miro.launch  search_and_rescue.launch
neg_dataset/: index.txt
processed_dataset/test/: labels.cache
processed_dataset/train/: labels.cache
runs/classify/train/: args.yaml
runs/classify/train10/: args.yaml  results.csv
runs/classify/train11/: args.yaml  results.csv
runs/classify/train12/: args.yaml  results.csv
runs/classify/train13/: args.yaml  results.csv
runs/classify/train14/: args.yaml  results.csv
runs/classify/train15/: args.yaml  results.csv
runs/classify/train16/: args.yaml  results.csv
runs/classify/train17/: args.yaml  results.csv
runs/classify/train18/: args.yaml
runs/classify/train19/: args.yaml  results.csv
runs/classify/train2/: args.yaml
runs/classify/train20/: args.yaml  results.csv
runs/classify/train21/: args.yaml  results.csv
runs/classify/train22/: args.yaml  results.csv
runs/classify/train23/: args.yaml  results.csv
runs/classify/train24/: args.yaml  results.csv
runs/classify/train25/: args.yaml
runs/classify/train26/: args.yaml  results.csv
runs/classify/train3/: args.yaml
runs/classify/train4/: args.yaml  results.csv
runs/classify/train5/: args.yaml  results.csv
runs/classify/train6/: args.yaml  results.csv
runs/classify/train7/: args.yaml  results.csv
runs/classify/train8/: args.yaml  results.csv
runs/classify/train9/: args.yaml  results.csv
runs/detect/train/: args.yaml  results.csv
runs/detect/train10/: args.yaml  results.csv
runs/detect/train11/: args.yaml  results.csv
runs/detect/train12/: args.yaml  results.csv
runs/detect/train13/: args.yaml  results.csv
runs/detect/train14/: args.yaml
runs/detect/train15/: args.yaml  results.csv
runs/detect/train16/: args.yaml  results.csv
runs/detect/train17/: args.yaml  results.csv
runs/detect/train18/: args.yaml  results.csv
runs/detect/train19/: args.yaml
runs/detect/train2/: args.yaml  results.csv
runs/detect/train20/: args.yaml
runs/detect/train21/: args.yaml  results.csv
runs/detect/train22/: args.yaml  results.csv
runs/detect/train23/: args.yaml  results.csv
runs/detect/train24/: args.yaml
scripts/: Helper.py  Lost.py  depth_perception.py  detect_wolf_howl_event.py  distress_signal_sender.py  explore.py  explore_real.py  frequency_instructions.py  localise_audio.py  look_miro.py  look_miro_real.py  lost_navigate.py  make_sound.py  object_detection.py  program_demo.py  recognise_miro.py  search_miro.py
src/: biorescue_detect_audio_engine.py  biorescue_phase1.py  biorescue_spectrogram.py  brainstem_phase1.py  miro_ros_interface.py
tools/: classifier_dataset.py  classifier_test.py  cnn_test.py  contors.py  detection_dataset.py  distort_images.py  feature_crop.py  mask_dataset.py  mask_test.py  node_detect_audio_engine.py  take_images.py  take_images2.py  take_negative_images.py  train_angle.py  train_classifier.py  train_detection.py  train_yolo.py  yolo_onnx.py  yolo_test.py
worlds/: complex_enviroment.world  simple_enviroment.world  take_images.world
(+65 files in other folders)
