<?xml version="1.0"?>
<package format="2">
  <name>team04</name>
  <version>0.0.0</version>
  <description>The team04 package</description>

  <!-- Project Maintainers -->
  <maintainer email="jbrice2@sheffield.ac.uk">miro</maintainer>
  <maintainer email="shann1@sheffield.ac.uk">miro</maintainer>
  <maintainer email="khamer1@sheffield.ac.uk">miro</maintainer>
  <maintainer email="amalshehhi1@sheffield.ac.uk">miro</maintainer>
  <maintainer email="fharveyokeefe1@sheffield.ac.uk">miro</maintainer>


  <!-- licensing -->
  <license>BSD</license>

  <!-- authors -->
  <author email="jbrice2@sheffield.ac.uk">miro</author>
  <author email="shann1@sheffield.ac.uk">miro</author>
  <author email="khamer1@sheffield.ac.uk">miro</author>
  <author email="amalshehhi1@sheffield.ac.uk">miro</author>
  <author email="fharveyokeefe1@sheffield.ac.uk">miro</author>

  <!-- build dependencies-->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <depend>tf</depend> 
  <depend>cv_bridge</depend>

</package>
